--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -2,4 +2,7 @@
     <ItemGroup>
         <Compile Include="../Shared/**/*.cs" />
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Models\Models.csproj" />
+    </ItemGroup>
 </Project>
