--- a/DatabaseConsole/DatabaseConsole.csproj
+++ b/DatabaseConsole/DatabaseConsole.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Database\Database.csproj" />
+    <ProjectReference Include="..\Server\Server.csproj" />
   </ItemGroup>
 
 </Project>
