--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -8,6 +8,7 @@
   
     <ItemGroup>
       <PackageReference Include="CitizenFX.Core.Server" Version="1.0.*" />
+      <PackageReference Include="FluentScheduler" Version="5.5.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   
       <Compile Include="../Shared/**/*.cs" Version="1.0.0" />
