--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -26,6 +26,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.2" />
+    <PackageReference Include="YamlDotNet" Version="13.0.0" />
   </ItemGroup>
 </Project>
   
